change logo about easy-openshift

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,4 +1,4 @@
-appname = easy
+appname = Easy-Openshift
 httpport = 8080
 runmode = dev
 
@@ -6,7 +6,7 @@ runmode = dev
 jobs.pool = 1000
 
 # 站点名称
-site.name = 定时任务管理器
+site.name = Easy-Openshift
 
 # 数据库配置
 db.host = 127.0.0.1
